# api-project-component-v0/openapi/api-project-component-v0.yaml
@@ -27,7 +27,7 @@ paths:
         - name: projectId
           in: path
           required: true
-          description: Project id
+          description: Project key
           schema:
             type: string
       requestBody:
@@ -37,8 +37,8 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateComponentRequest'
       responses:
-        '201':
-          description: Created
+        '200':
+          description: OK
           headers:
             Location:
               schema:
@@ -49,14 +49,26 @@ paths:
                 $ref: '#/components/schemas/CreateComponentResponse'
         '400':
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateComponentResponse'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
         '403':
           description: Forbidden
         '404':
           description: Endpoint not found / Project not found / Product not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateComponentResponse'
         '500':
           description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateComponentResponse'
 
   /projects/{projectId}/components/{componentId}:
     get:
@@ -69,7 +81,7 @@ paths:
         - name: projectId
           in: path
           required: true
-          description: Project id
+          description: Project key
           schema:
             type: string
         - name: componentId
@@ -78,6 +90,7 @@ paths:
           description: Component id
           schema:
             type: string
+            format: uuid
       responses:
         '200':
           description: Component information
@@ -105,6 +118,10 @@ components:
   schemas:
     Component:
       type: object
+      x-class-extra-annotation: |
+        @com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
+      required:
+        - params
       properties:
         id:
           type: string
@@ -117,50 +134,94 @@ components:
           description: Description of the product
         productName:
           type: string
-          description: Name of the product (e.g. Docker plain)
+          description: Name of the product
         productId:
           type: string
           description: Product ID
         environment:
-          type: string
-          description: Environment (e.g. DEV)
+          $ref: '#/components/schemas/EnvironmentsTypeDTO'
+          description: Environment
         status:
-          type: string
-          description: Status of the component (e.g. READY, NOT_READY)
+          $ref: '#/components/schemas/EnvironmentsStatusDTO'
+          description: Status of the component
         resultTraceback:
-          type: string
+          type: object
+          nullable: true
           description: Traceback information in case of error
+          x-field-extra-annotation: |
+            @com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_EMPTY)
         repositoryURL:
           type: string
           description: URL of the repository (for ODS products)
         params:
           type: object
           description: Additional parameters (key-value pairs)
+          additionalProperties: true
         component-type:
           type: string
           description: Type of component (ods|awx)
     CreateComponentResponse:
       type: object
+      required:
+        - timestamp
+        - httpStatus
+        - errorKey
+        - message
+        - path
       properties:
-        errorCode:
+        timestamp:
           type: integer
-        field:
+          format: int64
+        httpStatus:
+          type: string
+        errorKey:
+          type: string
+        error:
           type: string
         message:
           type: string
-        location:
+        path:
           type: string
-          format: url
     CreateComponentRequest:
       type: object
+      required:
+        - name
+        - productId
+        - params
       properties:
         name:
           type: string
-          description: component name
+          description: Component name
+          minLength: 2
+          maxLength: 52
+          pattern: "^[a-z]+(-?[a-z0-9]+)*$"
+          x-field-extra-annotation: |
+            @Size(min=2, message = "The component name must contain more than 1 character.")
+            @Size(max=52, message = "The component name must contain less than 53 characters.")
+            @Pattern(regexp = "^[a-z]+(-?[a-z0-9]+)*$", message = "Only lowercase letters and numbers are allowed (example: componentname8), with optional dashes in between (example: my-component). The first character must be a letter.")
         productId:
           type: string
-          description: product id
+          description: Product id
+        registerOnly:
+          type: boolean
+          description: Register only flag (no provisioning)
+          default: false
         params:
           type: object
-          additionalProperties:
-            type: string
+          description: Additional parameters (key-value pairs)
+          additionalProperties: true
+    EnvironmentsTypeDTO:
+      type: string
+      enum:
+        - DEV
+        - QA
+        - PROD
+    EnvironmentsStatusDTO:
+      type: string
+      enum:
+        - READY
+        - RUNNING
+        - FAILED
+        - DELETING
+        - DELETED
+        - UNKNOWN
