# api-project-component-v0/src/main/java/org/opendevstack/apiservice/project/controller/ProjectComponentsController.java
@@ -3,6 +3,8 @@ package org.opendevstack.apiservice.project.controller;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.opendevstack.apiservice.project.api.ProjectComponentsApi;
+import org.opendevstack.apiservice.project.exception.ComponentCreationException;
+import org.opendevstack.apiservice.project.exception.ComponentNotFoundException;
 import org.opendevstack.apiservice.project.facade.ComponentsFacade;
 import org.opendevstack.apiservice.project.mapper.ComponentResponseMapper;
 import org.opendevstack.apiservice.project.model.Component;
@@ -13,11 +15,15 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.UUID;
+
 @RestController
 @AllArgsConstructor
 @Slf4j
-@RequestMapping("/api/pub/v0")
+@RequestMapping(ProjectComponentsController.API_BASE_PATH)
 public class ProjectComponentsController implements ProjectComponentsApi {
+
+    public static final String API_BASE_PATH = "/api/pub/v0";
 
     private final ComponentsFacade componentsFacade;
 
@@ -25,32 +31,27 @@ public class ProjectComponentsController implements ProjectComponentsApi {
 
     @Override
     public ResponseEntity<CreateComponentResponse> createProjectComponent(String projectId, CreateComponentRequest createComponentRequest) {
-        try {
-            Component component = componentsFacade.createProjectComponent(projectId, createComponentRequest);
-            log.info("Created component {} for project id {} and request {}", component, projectId, createComponentRequest);
-            if (component == null) {
-                log.error("Failed to create component for project '{}'", projectId);
-                return componentResponseMapper.toResponseEntity(ComponentsResponseFactory.error(projectId));
-            }
-            return componentResponseMapper.toResponseEntity(ComponentsResponseFactory.entityCreated(projectId, component.getId()));
-        } catch (Exception e) {
-            log.error("Error while trying to create component for project '" + projectId + "': " + e.getMessage(), e);
-            return componentResponseMapper.toResponseEntity(ComponentsResponseFactory.error(projectId));
+        Component component = componentsFacade.createProjectComponent(projectId, createComponentRequest);
+        if (component == null) {
+            throw new ComponentCreationException(String.format("Failed to create component for project '%s'", projectId));
         }
+
+        log.info("Created component {} for project id {} and request {}", component, projectId, createComponentRequest);
+        return componentResponseMapper.toResponseEntity(
+                ComponentsResponseFactory.entityCreated(projectId, component.getId())
+        );
     }
 
     @Override
-    public ResponseEntity<Component> getProjectComponent(String projectId, String componentId) {
-        try {
-            Component component = componentsFacade.getProjectComponent(projectId, componentId);
-            log.info("Retrieved component '{}' for project '{}': {}", componentId, projectId, component);
-            if (component == null) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-            }
-            return ResponseEntity.status(HttpStatus.OK).body(component);
-        } catch (Exception e) {
-            log.error("Error retrieving component '{}' for project '{}': {}", componentId, projectId, e.getMessage(), e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+    public ResponseEntity<Component> getProjectComponent(String projectId, UUID componentId) {
+        Component component = componentsFacade.getProjectComponent(projectId, componentId.toString());
+        if (component == null) {
+            throw new ComponentNotFoundException(
+                    String.format("Component '%s' not found for project '%s'", componentId, projectId)
+            );
         }
+
+        log.info("Retrieved component '{}' for project '{}': {}", componentId, projectId, component);
+        return ResponseEntity.status(HttpStatus.OK).body(component);
     }
 }
